--- a/FrontBackmatter/Colophon.tex
+++ b/FrontBackmatter/Colophon.tex
@@ -5,7 +5,7 @@
 \vfill
 
 
-\pdfbookmark[0]{Colofón}{colofón}
+\pdfbookmark[0]{Colofón}{colophon}
 \section*{Colofón}
 This document was typeset using the typographical look-and-feel \texttt{classicthesis} developed by Andr\'e Miede and Ivo Pletikosić.
 The style was inspired by Robert Bringhurst's seminal book on typography ``\emph{The Elements of Typographic Style}''.
