Añado varios capitulos nuevos, hasta el 4

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -18,3 +18,167 @@ year = 2018,
 title = {Social media apps are 'deliberately' addictive to users},
 journal = {BBC Panorama}
 }
+
+@TECHREPORT{Salario-Desarrollador-Web,
+author = {Talent},
+year = 2022,
+title = {Salario medio para Programador Web en España, 2022},
+institution = {Talent}
+}
+
+@ARTICLE{Adiccion-RRSS-Features,
+author = {Montag C. and Lachmann B. and Herrlich M. and Zweig K.},
+year = 2019,
+title = {Addictive Features of Social Media/Messenger Platforms and Freemium Games against the Background of Psychological and Economic Theories},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6679162/#B67-ijerph-16-02612},
+journal = {National Library of Medicine}
+}
+
+@ARTICLE{Adiccion-RRSS-WhatsApp,
+author = {Manuel Moreno},
+year = 2022,
+title = {10 estadísticas sobre WhatsApp que quizá no sabías - TreceBits},
+journal = {TreceBits}
+}
+
+@ARTICLE{Adiccion-RRSS-Settings,
+author = {Jared Spool},
+year = 2011,
+title = {Do users change their settings?},
+journal = {Archive UIE}
+}
+
+@ARTICLE{Adiccion-RRSS-FOMO,
+author = {Orbium},
+year = 2020,
+title = {El fenómeno FOMO: fear of missing out},
+journal = {Orbium}
+}
+
+@ARTICLE{Adiccion-RRSS-Edgerank,
+author = {Laura Montells},
+year = 2021,
+title = {Qué es Edgerank o cómo funciona el algoritmo de Facebook},
+journal = {Metricool}
+}
+
+@ARTICLE{Adiccion-RRSS-Odias,
+author = {Chema Carvajal},
+year = 2021,
+title = {El algoritmo de Facebook te muestra contenido que odias para que interacciones más},
+journal = {ComputerHoy}
+}
+
+@ARTICLE{Adiccion-RRSS,
+author = {Raquel Rodríguez Cortés},
+year = 2021,
+title = {Adicción a las redes sociales: síntomas y consecuencias},
+journal = {Psiquion}
+}
+
+@article{orihuela2008internet,
+  title={Internet: la hora de las redes sociales},
+  author={Orihuela-Colliva, Jos{\'e} Luis},
+  year={2008}
+}
+
+@article{MONTAG2017221,
+title = {Facebook usage on smartphones and gray matter volume of the nucleus accumbens},
+journal = {Behavioural Brain Research},
+volume = {329},
+pages = {221-228},
+year = {2017},
+issn = {0166-4328},
+doi = {https://doi.org/10.1016/j.bbr.2017.04.035},
+url = {https://www.sciencedirect.com/science/article/pii/S0166432817305090},
+author = {Christian Montag and Alexander Markowetz and Konrad Blaszkiewicz and Ionut Andone and Bernd Lachmann and Rayna Sariyska and Boris Trendafilov and Mark Eibes and Julia Kolb and Martin Reuter and Bernd Weber and Sebastian Markett},
+keywords = {Facebook nucleus accumbens, Online social network addiction},
+abstract = {A recent study has implicated the nucleus accumbens of the ventral striatum in explaining why online-users spend time on the social network platform Facebook. Here, higher activity of the nucleus accumbens was associated with gaining reputation on social media. In the present study, we touched a related research field. We recorded the actual Facebook usage of N=62 participants on their smartphones over the course of five weeks and correlated summary measures of Facebook use with gray matter volume of the nucleus accumbens. It appeared, that in particular higher daily frequency of checking Facebook on the smartphone was robustly linked with smaller gray matter volumes of the nucleus accumbens. The present study gives additional support for the rewarding aspects of Facebook usage. Moreover, it shows the feasibility to include real life behavior variables in human neuroscientific research.}
+}
+
+@article{sherman2018peer,
+  title={Peer influence via instagram: Effects on brain and behavior in adolescence and young adulthood},
+  author={Sherman, Lauren E. and Greenfield, Patricia M and Hernandez, Leanna M and Dapretto, Mirella},
+  journal={Child development},
+  volume={89},
+  number={1},
+  pages={37--47},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@ARTICLE{Adiccion-RRSS-Interesante,
+author = {Sergio Parra},
+year = 2020,
+title = {La razón de que sea tan fácil volvernos adictos a contenidos digitales},
+journal = {MuyInteresante}
+}
+
+@article{bahena2000dopamina,
+  title={Dopamina: s{\'\i}ntesis, liberaci{\'o}n y receptores en el Sistema Nervioso Central},
+  author={Bahena-Trujillo and Ricardo and Flores and Gonzalo and Arias-Monta{\~n}o and Jos{\'e} A.},
+  journal={Revista Biom{\'e}dica},
+  volume={11},
+  number={1},
+  pages={39--60},
+  year={2000}
+}
+
+@article{quintero2021que,
+  title={?` Por qu{\'e} el ser humano es adicto a las redes sociales?},
+  author={Quintero-Cacique and Juan Camilo and Lesmes-Silva and Anggy Karina},
+  journal={Revista CONVICCIONES},
+  volume={8},
+  number={15},
+  pages={6--9},
+  year={2021}
+}
+
+@ARTICLE{Cerebro-RRSS-AS,
+author = {Javier Robledo Vico},
+year = 2017,
+title = {Así afectan las redes sociales a nuestro cerebro},
+journal = {AS}
+}
+
+@ARTICLE{Pavlov-RRSS-AS,
+author = {Jairo Rozo Castillo},
+year = 2015,
+title = {Pavlov y los reflejos condicionados: la verdadera historia sobre un descubrimiento},
+journal = {PsicologiaCientifica}
+}
+
+@ARTICLE{Xataka-RRSS-AS,
+author = {Santiago Campillo},
+year = 2019,
+title = {Lo que pasa en nuestro cerebro cuando recibimos una notificación, según la ciencia},
+journal = {Xataka}
+}
+
+@ARTICLE{Frontiers-RRSS-AS,
+author = {Krach S. and Paulus F.M. and Bodden M. and Kircher T.},
+year = 2010,
+title = {The rewarding nature of social interactions},
+journal = {Frontiers in behavioral neuroscience}
+}
+
+@ARTICLE{Reviews-RRSS-AS,
+author = {Trevor Wheelwright},
+year = 2022,
+title = {2022 Cell Phone Usage Statistics: How Obsessed Are We?},
+journal = {Reviews}
+}
+
+@ARTICLE{CNEIP-RRSS-AS,
+author = {Portillo-Reyes and V. Ávila-Amaya, J. A. and Capps, J. W. },
+year = 2021,
+title = {Relación del Uso de Redes Socia-les con la Autoestima y la Ansiedad en Estudiantes Universitarios},
+journal = {Enseñanza e Investigación en Psicología}
+}
+
+@ARTICLE{FORBES-RRSS-AS,
+author = {Blake Morgan},
+year = 2020,
+title = {50 Stats Showing The Power Of Personalization},
+journal = {Forbes}
+}
