--- a/FrontBackmatter/Indice.tex
+++ b/FrontBackmatter/Indice.tex
@@ -65,7 +65,8 @@
     \markboth{\spacedlowsmallcaps{Acrónimos}}{\spacedlowsmallcaps{Acrónimos}}
     \chapter*{Acrónimos}
     \begin{acronym}[UMLX]
-    	
+    	\acro{RRSS}{redes sociales}
+        \acro{FOMO}{\textit{fear of missing out}, «temor a dejar pasar» o «temor a perderse algo»}
     \end{acronym}
 
 \endgroup 
