--- a/Thesis.tex
+++ b/Thesis.tex
@@ -81,10 +81,10 @@
 	%\ctparttext{\centering\textit{``What do all these fancy words mean?''}}
 	\part{Introducción}\label{pt:introduction}
 	\include{Chapters/Chapter01}
-	%\include{Chapters/Chapter02}
-	%\include{Chapters/Chapter03}
-	%\part{Methodology}\label{pt:methodology}
-	%\include{Chapters/Chapter04}
+	\include{Chapters/Chapter02}
+	\include{Chapters/Chapter03}
+	\part{Propuesta}\label{pt:propuesta}
+	\include{Chapters/Chapter04}
 	%\include{Chapters/Chapter05}
 	%\include{Chapters/Chapter06}
 	%\part{Experiments and conclusions}\label{pt:results}
