Avances hasta requisitos del sistema

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -182,3 +182,57 @@ year = 2020,
 title = {50 Stats Showing The Power Of Personalization},
 journal = {Forbes}
 }
+
+@article{gomez2010criterios,
+  title={Criterios de selecci{\'o}n de metodolog{\'\i}as de desarrollo de software},
+  author={G{\'o}mez, Oscar Tinoco and L{\'o}pez, Pedro Pablo Rosales and Bacalla, Julio Salas},
+  journal={Industrial data},
+  volume={13},
+  number={2},
+  pages={70--74},
+  year={2010},
+  publisher={Universidad Nacional Mayor de San Marcos}
+}
+
+@article{maida2015metodologias,
+  title={Metodolog{\'\i}as de desarrollo de software},
+  author={Maida, Esteban Gabriel and Pacienzia, Juli{\'a}n},
+  year={2015}
+}
+
+@article{canos2003metodologias,
+  title={Metodolog{\'\i}as {\'a}giles en el desarrollo de software},
+  author={Can{\'o}s, Jos{\'e} H and Letelier, Patricio and Penad{\'e}s, M{\textordfeminine} Carmen},
+  journal={Universidad Polit{\'e}cnica de Valencia, Valencia},
+  pages={1--8},
+  year={2003}
+}
+
+@article{rodriguez2015que,
+  title={?` Por qu{\'e} implementar Scrum?},
+  author={Rodr{\'\i}guez, C{\'e}sar and Dorado, Rub{\'e}n},
+  journal={Revista Ontare},
+  volume={3},
+  number={1},
+  pages={125--144},
+  year={2015}
+}
+
+@book{rad2019fundamentos,
+  title={Los Fundamentos de Agile Scrum},
+  author={Rad, Nader K and Turley, Frank},
+  year={2019},
+  publisher={Van Haren}
+}
+
+@MANUAL{pytrends-manual,
+  title={Libreria Pytrends},
+  author={Hogue, John and DeWilde, Burton},
+  url={https://pypi.org/project/pytrends/}
+}
+
+@MANUAL{tweepy-manual,
+  title={Libreria Tweepy},
+  author={Roesslein, Joshua},
+  url={https://docs.tweepy.org/en/latest/index.html}
+}
