--- a/FrontBackmatter/Indice.tex
+++ b/FrontBackmatter/Indice.tex
@@ -67,6 +67,7 @@
     \begin{acronym}[UMLX]
     	\acro{RRSS}{redes sociales}
         \acro{FOMO}{\textit{fear of missing out}, «temor a dejar pasar» o «temor a perderse algo»}
+        \acro{TT}{\textit{trending topic}, «tendencia», «tema de tendencia» o «tema del momento»}
     \end{acronym}
 
 \endgroup 
