--- a/FrontBackmatter/Resumen.tex
+++ b/FrontBackmatter/Resumen.tex
@@ -16,7 +16,7 @@ A día de hoy, las aplicaciones web sociales más dominantes del mercado intenta
 
 \vspace{0.3cm}
 
-Dada la atosigante abundancia de información he decidido hacer una aplicación web que te proporcione información de una manera mucho más simple sobre tendencias actuales. De esta manera, los usuarios no tendrán que estar tan pendientes en mantenerse actualizados, sino que al final del día tendrán resumida la información más destacable y otros datos útiles en base a la tendencia.
+Dada la atosigante abundancia de información he decidido hacer una aplicación web que proporcione información de una manera mucho más simple sobre tendencias actuales. De esta manera, los usuarios no tendrán que estar tan pendientes en mantenerse actualizados, sino que al final del día tendrán simplificada o resumida la información más destacable y otros datos útiles en base a la tendencia.
 
 \vspace{0.3cm}
 
