Avanzando hasta DevOps

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -225,6 +225,18 @@ journal = {Forbes}
   publisher={Van Haren}
 }
 
+@ARTICLE{aqruitecturaMicrosoft,
+  title={Arquitectura basada en Componentes. Extractado de La Guía de Arquitectura Versión 2.0a del grupo de Patterns and Practices de Microsoft.},
+  author={Pelaez, J},
+}
+
+@ARTICLE{VueComparison,
+  title={Vue vs React in 2022 - Comparison of Two Most Popular JS Frameworks.},
+  author={Nowak, Maja},
+  year={2022},
+  publisher={Monterail}
+}
+
 @MANUAL{pytrends-manual,
   title={Libreria Pytrends},
   author={Hogue, John and DeWilde, Burton},
@@ -235,4 +247,52 @@ journal = {Forbes}
   title={Libreria Tweepy},
   author={Roesslein, Joshua},
   url={https://docs.tweepy.org/en/latest/index.html}
+}
+
+@MANUAL{mongodb-manual,
+  title={Why Use MongoDB and When to Use It?},
+  author={MongoDB},
+  url={https://www.mongodb.com/why-use-mongodb}
+}
+
+@MANUAL{redahat-manual,
+  title={What is a REST API?},
+  author={Red Hat},
+  url={https://www.redhat.com/es/topics/api/what-is-a-rest-api}
+}
+
+@MANUAL{redahat-devops,
+  title={El concepto de DevOps},
+  author={Red Hat},
+  url={https://www.redhat.com/es/topics/devops}
+}
+
+@MANUAL{fastapi-manual,
+  title={FastAPI Documentation},
+  author={FastAPI},
+  url={https://fastapi.tiangolo.com}
+}
+
+@MANUAL{heroku-manual,
+  title={Heroku Documentation},
+  author={Heroku},
+  url={https://devcenter.heroku.com/articles/getting-started-with-python}
+}
+
+@MANUAL{uvicorn-manual,
+  title={Uvicorn Documentation},
+  author={Uvicorn},
+  url={https://www.uvicorn.org}
+}
+
+@ARTICLE{azure-devops,
+  title={Azure DevOps + Herramientas de Comunicación},
+  author={Pérez, Angel},
+  year={2020},
+}
+
+@ARTICLE{ilimit-devops,
+  title={DevOps},
+  author={iLimit},
+  year={2020},
 }
