--- a/FrontBackmatter/Indice.tex
+++ b/FrontBackmatter/Indice.tex
@@ -68,6 +68,17 @@
     	\acro{RRSS}{redes sociales}
         \acro{FOMO}{\textit{fear of missing out}, «temor a dejar pasar» o «temor a perderse algo»}
         \acro{TT}{\textit{trending topic}, «tendencia», «tema de tendencia» o «tema del momento»}
+        \acro{PaaS}{\textit{plataforma as a service}, «plataforma como servicio»}
+        \acro{YAKE}{\textit{Yet Another Keyword Extractor}}
+        \acro{VADER}{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
+        \acro{DOM}{\textit{Document Object Model}}
+        \acro{API}{\textit{application programming interface}, «interfaz de programación de aplicaciones»}
+        \acro{REST}{\textit{representational state transfer}, «transferencia de estado representacional»}
+        \acro{HTTP}{\textit{Hypertext Transfer Protocol}, «Protocolo de Transferencia de Hipertexto»}
+        \acro{JSON}{\textit{JavaScript Object Notation}, «notación de objeto de JavaScript»}
+        \acro{CRUD}{\textit{Create, Read, Update and Delete}, «Crear, Leer, Actualizar y Borrar»}
+        \acro{ASGI}{\textit{Asynchronous Server Gateway Interface}}
+        \acro{WSGI}{\textit{Web Server Gateway Interface}}
     \end{acronym}
 
 \endgroup 
