--- a/Thesis.tex
+++ b/Thesis.tex
@@ -85,8 +85,8 @@
 	\include{Chapters/Chapter03}
 	\part{Propuesta}\label{pt:propuesta}
 	\include{Chapters/Chapter04}
-	%\include{Chapters/Chapter05}
-	%\include{Chapters/Chapter06}
+	\include{Chapters/Chapter05}
+	\include{Chapters/Chapter06}
 	%\part{Experiments and conclusions}\label{pt:results}
 	%\include{Chapters/Chapter07}
 	%\include{Chapters/Chapter08}
