--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -78,6 +78,7 @@
 \SetKwProg{Fn}{Function}{}{end}
 \SetKwProg{Proc}{Procedure}{}{end}
 \usepackage{fixltx2e}
+\usepackage{float}
 % ********************************************************************
 % Packages with options that might require adjustments
 % ********************************************************************
