Se ha terminado la redacción y capítulo final

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -285,6 +285,66 @@ journal = {Forbes}
   url={https://www.uvicorn.org}
 }
 
+@MANUAL{github-manual,
+  title={GitHub Documentation},
+  author={GitHub},
+  url={https://docs.github.com/es}
+}
+
+@MANUAL{poetry-manual,
+  title={Poetry Documentation},
+  author={Poetry},
+  url={https://python-poetry.org/docs/}
+}
+
+@MANUAL{mypy-manual,
+  title={Mypy Documentation},
+  author={Mypy},
+  url={https://mypy.readthedocs.io/en/stable/index.html}
+}
+
+@MANUAL{flake8-manual,
+  title={Flake8 Documentation},
+  author={Flake8},
+  url={https://flake8.pycqa.org/en/latest/}
+}
+
+@MANUAL{pytest-manual,
+  title={Pytest Documentation},
+  author={Pytest},
+  url={https://docs.pytest.org/en/7.2.x/}
+}
+
+@MANUAL{tox-manual,
+  title={Tox Documentation},
+  author={Tox},
+  url={https://tox.wiki/en/latest/}
+}
+
+@MANUAL{npm-manual,
+  title={Npm Documentation},
+  author={Npm},
+  url={https://docs.npmjs.com}
+}
+
+@MANUAL{eslint-manual,
+  title={ESLint Documentation},
+  author={ESLint},
+  url={https://eslint.org/docs/latest/}
+}
+
+@MANUAL{prettier-manual,
+  title={Prettier Documentation},
+  author={Prettier},
+  url={https://prettier.io/docs/en/}
+}
+
+@MANUAL{pydantic-manual,
+  title={Pydantic Documentation},
+  author={Pydantic},
+  url={https://pydantic-docs.helpmanual.io}
+}
+
 @ARTICLE{azure-devops,
   title={Azure DevOps + Herramientas de Comunicación},
   author={Pérez, Angel},
@@ -296,3 +356,37 @@ journal = {Forbes}
   author={iLimit},
   year={2020},
 }
+
+@ARTICLE{TowardsAI-vader,
+  title={TextBlob vs. VADER for Sentiment Analysis Using Python},
+  author={Towards AI},
+  year={2021},
+}
+
+@MANUAL{vue-life,
+  title={Lifecycle Hooks},
+  author={Vue},
+  url={https://vuejs.org/guide/essentials/lifecycle.html},
+}
+
+@BOOK{yake-libro,
+author="Campos, Ricardo
+and Mangaravite, V{\'i}tor
+and Pasquali, Arian
+and Jorge, Al{\'i}pio M{\'a}rio
+and Nunes, C{\'e}lia
+and Jatowt, Adam",
+editor="Pasi, Gabriella
+and Piwowarski, Benjamin
+and Azzopardi, Leif
+and Hanbury, Allan",
+title="YAKE! Collection-Independent Automatic Keyword Extractor",
+booktitle="Advances in Information Retrieval",
+year="2018",
+publisher="Springer International Publishing",
+address="Cham",
+pages="806--810",
+abstract="In this paper, we present YAKE!, a novel feature-based system for multi-lingual keyword extraction from single documents, which supports texts of different sizes, domains or languages. Unlike most systems, YAKE! does not rely on dictionaries or thesauri, neither it is trained against any corpora. Instead, we follow an unsupervised approach which builds upon features extracted from the text, making it thus applicable to documents written in many different languages without the need for external knowledge. This can be beneficial for a large number of tasks and a plethora of situations where the access to training corpora is either limited or restricted. In this demo, we offer an easy to use, interactive session, where users from both academia and industry can try our system, either by using a sample document or by introducing their own text. As an add-on, we compare our extracted keywords against the output produced by the IBM Natural Language Understanding (IBM NLU) and Rake system. YAKE! demo is available at http://bit.ly/YakeDemoECIR2018. A python implementation of YAKE! is also available at PyPi repository (https://pypi.python.org/pypi/yake/).",
+isbn="978-3-319-76941-7"
+}
+
