--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -20,14 +20,18 @@ Given the overwhelming abundance of information, I have decided to make a web ap
 
 \vspace{0.3cm}
 
-The project involves all the knowledge, both in computer engineering and outside of it, that I was able to acquire throughout my learning cycle in the computer field.
+The idea that this project tries to carry out is the management of trends from the Twitter API and the extraction of relevant content based on the trend, such as the volume of publications, keywords, general sentiments or relevant news.
 
 \vspace{0.3cm}
 
-Going into more detail in the applied knowledge, the project is made up of a three-layer architecture: the user interface, a management layer and a data layer. The technologies used can be summarized in JavaScript, Python and NoSQL. JavaScript, specifically Vue.js for the Front-end section. For the Back-end, Python as the manager or processor and MongoDB as the database system.
+The project involves all the knowledge, both in computer engineering and outside of it, that I have been able to acquire throughout my learning cycle in the computer field. In addition to studying the programmable and functional part of the application, a rigorous study is carried out on the most ideal planning, structure and architecture to the project.
 
 \vspace{0.3cm}
 
-By combining these technologies, the model that ends up being used is representational state transfer or REST API, in which different routes and web requests will be used, but which will continue to be a single application for the final user.
+Going into more detail in the applied knowledge, the project will be approached with a layered architecture and an API REST model. The mostly used programming languages will be JavaScript, Python and the type of databases will be NoSQL.
+
+\vspace{0.3cm}
+
+However, throughout the project the reason for these decisions will be studied and it will be demonstrated how by combining these technologies, a single application is achieved for the end user.
 
 \vfill
