--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -3,11 +3,14 @@
 \begingroup
 \chapter*{Agradecimientos}
 
-Agradecimientos...
+Me gustaría poder agradecer a todas las personas que han tenido que escuchar hablarme sobre este proyecto y sobre todo a las personas que me han ayudado a realizarlo.
 
-\vfill
+\vspace{0.3cm}
 
-\noindent
-Agradecimientos
+Quisiera expresar un especial agradecimiento a mis supervisores, Juan y Carlos, por la oportunidad de permitirme trabajar en un proyecto con ambición personal. Sin olvidar el trabajo y esfuerzo de aquellos profesores cuya dedicación ha conseguido que llegase hasta aquí.
+
+\vspace{0.3cm}
+
+Finalmente, quiero agradecer de corazón a mi familia y mi círculo de amigos. Aun viviendo en distintas situaciones, han podido confiar en mí.
 
 \endgroup
