--- a/FrontBackmatter/Resumen.tex
+++ b/FrontBackmatter/Resumen.tex
@@ -20,14 +20,18 @@ Dada la atosigante abundancia de información he decidido hacer una aplicación 
 
 \vspace{0.3cm}
 
-El proyecto involucra todos los conocimientos, tanto en la ingeniería informática como fuera de ella, que he podido adquirir a lo largo de mi ciclo de aprendizaje del ámbito informático.
+La idea que se intenta realizar con este proyecto es una gestión de tendencias a partir de la API de Twitter y la extracción de contenido relevante en base a la tendencia, como puede ser el volumen de publicaciones, palabras claves, sentimientos generales o noticias relevantes.
 
 \vspace{0.3cm}
 
-Entrando más en detalle en los conocimientos aplicados, el proyecto está compuesto por una arquitectura de tres capas: la interfaz de usuario, una capa de gestión y otra de datos. Las tecnologías usadas se pueden resumir en JavaScript, Python y NoSQL. JavaScript, en concreto Vue.js para el apartado Front-end. Para el Back-end, Python como el gestor o el procesador y MongoDB como el sistema de base de datos.
+El proyecto involucra todos los conocimientos, tanto en la ingeniería informática como fuera de ella, que he podido adquirir a lo largo de mi ciclo de aprendizaje del ámbito informático. Además de estudiar la parte programable y funcional de la aplicación, se realiza un estudio riguroso sobre la planificación, estructura y arquitectura ideal al proyecto.
 
 \vspace{0.3cm}
 
-Al combinar estas tecnologías, el modelo que se termina usando es la transferencia de estado representacional o API REST, en el cual se usarán distintos enrutadores y peticiones web, pero que, de cara al usuario final, seguirá siendo una única aplicación.
+Entrando más en detalle en los conocimientos aplicados, el proyecto se planteará con una arquitectura por capas y un modelo API REST. Los lenguajes de programación usados en su mayoría serán JavaScript, Python y el tipo de bases de datos será NoSQL. 
+
+\vspace{0.3cm}
+
+No obstante, a lo largo del proyecto se estudiará la razón de estas decisiones y se demostrará cómo combinando estas tecnologías, se llega a realizar una única aplicación en cara al usuario final.
 
 \vfill
