--- a/Thesis.tex
+++ b/Thesis.tex
@@ -86,10 +86,10 @@
 	\part{Propuesta}\label{pt:propuesta}
 	\include{Chapters/Chapter04}
 	\include{Chapters/Chapter05}
+    \part{Realización}\label{pt:implementacion}
 	\include{Chapters/Chapter06}
-	%\part{Experiments and conclusions}\label{pt:results}
-	%\include{Chapters/Chapter07}
-	%\include{Chapters/Chapter08}
+	\include{Chapters/Chapter07}
+	\include{Chapters/Chapter08}
 
 
 	% Backmatter
