--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -85,7 +85,7 @@
 %\PassOptionsToPackage{ngerman,american}{babel}   % change this to your language(s), main language last
 % Spanish languages need extra options in order to work with this template
 \PassOptionsToPackage{spanish,es-lcroman}{babel}
-    \usepackage[spanish]{babel}
+    \usepackage[spanish,es-tabla]{babel}
 
 \usepackage{csquotes}
 \PassOptionsToPackage{%
@@ -153,24 +153,33 @@
 % 5. Setup code listings
 % ****************************************************************************************************
 \usepackage{listings}
-%\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % for special keywords
+\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % for special keywords
 \lstset{language=[LaTeX]Tex,%C++,
   morekeywords={PassOptionsToPackage,selectlanguage},
-  keywordstyle=\color{RoyalBlue},%\bfseries,
+  keywordstyle=\color{BlueViolet}\bfseries,
   basicstyle=\small\ttfamily,
-  %identifierstyle=\color{NavyBlue},
+  identifierstyle=\color{MidnightBlue},
   commentstyle=\color{Green}\ttfamily,
   stringstyle=\rmfamily,
-  numbers=none,%left,%
   numberstyle=\scriptsize,%\tiny
-  stepnumber=5,
-  numbersep=8pt,
   showstringspaces=false,
   breaklines=true,
   %frameround=ftff,
   %frame=single,
-  belowcaptionskip=.75\baselineskip
+  belowcaptionskip=.75\baselineskip,
   %frame=L
+  frame= tb,
+  tabsize= 1,
+  numbers= left,
+  backgroundcolor  = \color{supergray},
+  stringstyle=\color{Brown},
+  breakatwhitespace=false,
+  keepspaces=true,
+  numbersep=8pt,
+  showspaces=false,
+  showtabs=false,
+  captionpos=b,
+  literate={á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1,
 }
 % ****************************************************************************************************
 
