Finalizando y detallando la memoria

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -141,6 +141,13 @@ title = {Así afectan las redes sociales a nuestro cerebro},
 journal = {AS}
 }
 
+@ARTICLE{vader-explained,
+author = {Pio Calderon},
+year = 2017,
+title = {VADER Sentiment Analysis Explained},
+journal = {Medium}
+}
+
 @ARTICLE{Pavlov-RRSS-AS,
 author = {Jairo Rozo Castillo},
 year = 2015,
@@ -369,6 +376,27 @@ journal = {Forbes}
   url={https://vuejs.org/guide/essentials/lifecycle.html},
 }
 
+@MANUAL{vader-manual,
+  title={VADER Manual},
+  author={VADER},
+  url={https://github.com/cjhutto/vaderSentiment},
+}
+
+@MANUAL{ukr-vader,
+  title={Ukrainian-Sentiment-Analysis},
+  author={skupriienko},
+  url={https://github.com/skupriienko/Ukrainian-Sentiment-Analysis},
+}
+
+@article{Saralegi-vader,
+ author = {Saralegi X. and San Vicente I.},
+ title = {XXIX Congreso de la Sociedad Española de Procesamiento de lenguaje natural},
+ journal = {Elhuyar at TASS 2013},
+ volume = {978-84-695-8349-4},
+ pages = {143-150},
+ year = {2013}
+}
+
 @BOOK{yake-libro,
 author="Campos, Ricardo
 and Mangaravite, V{\'i}tor
@@ -390,3 +418,13 @@ abstract="In this paper, we present YAKE!, a novel feature-based system for mult
 isbn="978-3-319-76941-7"
 }
 
+@inproceedings{levenshtein1966binary,
+  title={Binary codes capable of correcting deletions, insertions, and reversals},
+  author={Levenshtein, Vladimir I and others},
+  booktitle={Soviet physics doklady},
+  volume={10},
+  number={8},
+  pages={707--710},
+  year={1966},
+  organization={Soviet Union}
+}
