--- a/FrontBackmatter/Indice.tex
+++ b/FrontBackmatter/Indice.tex
@@ -98,6 +98,7 @@
         \acro{CRUD}{\textit{Create, Read, Update and Delete}, «Crear, Leer, Actualizar y Borrar»}
         \acro{ASGI}{\textit{Asynchronous Server Gateway Interface}}
         \acro{WSGI}{\textit{Web Server Gateway Interface}}
+        \acro{RSS}{\textit{Really Simple Syndication}, «sindicación realmente simple»}
     \end{acronym}
 
 \endgroup 
